Added README.md, LICENSE, and fixes

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -14,6 +14,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/main.css" />
     <link rel="shortcut icon" type="image/png" href="../assets/img/favicon.ico" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177832705-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-177832705-1');
+    </script>
   </head>
   <body>
     <div class="container">
@@ -31,7 +39,7 @@
             <li><a class="yellow" href="../index.html">/whoami</a></li>
             <li><a class="yellow" href="./projects.html">/projects</a></li>
             <li><a class="yellow active" href="#">/toolbox</a></li>
-            <li><a class="red" class="resume" href="../assets/docs/Resume_Haidar-Ali.pdf">/resume</a></li>
+            <li><a class="red" href="../assets/docs/Resume_Haidar-Ali.pdf">/resume</a></li>
           </ul>
         </div>
       </div>
@@ -48,16 +56,16 @@
 
           </pre>
           <ul>
-            <li><em>Operating System:</em> Arch Linux
-            <li><em>Window Manager:</em> DWM
-            <li><em>Code Editor:</em> NeoVim
-            <li><em>Terminal:</em> st
-            <li><em>Browser:</em> Mozilla Firefox
-            <li><em>File Manager:</em> lf
-            <li><em>Media Player:</em> mpv
-            <li><em>Image Editor:</em> GIMP
-            <li><em>Image Viewer</em> feh, sxiv
-            <li><em>Document Viewer:</em> zathura
+            <li><em>Operating System:</em>Arch Linux</li>
+            <li><em>Window Manager:</em>DWM</li>
+            <li><em>Code Editor:</em>NeoVi</li>
+            <li><em>Terminal:</em>st</li>
+            <li><em>Browser:</em>Mozilla Firefox</li>
+            <li><em>File Manager:</em>lf</li>
+            <li><em>Media Player:</em>mpv</li>
+            <li><em>Image Editor:</em>GIMP</li>
+            <li><em>Image Viewer</em>feh, sxiv</li>
+            <li><em>Document Viewer:</em>zathura</li>
           </ul>
         </div>
       </div>
