--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="shortcut icon" type="image/png" href="./assets/img/favicon.ico" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177832705-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-177832705-1');
+    </script>
   </head>
   <body>
     <div class="container">
@@ -31,7 +39,7 @@
             <li><a class="yellow active" href="#">/whoami</a></li>
             <li><a class="yellow" href="./pages/projects.html">/projects</a></li>
             <li><a class="yellow" href="./pages/tools.html">/toolbox</a></li>
-            <li><a class="red" class="resume" href="./assets/docs/Resume_Haidar-Ali.pdf">/resume</a></li>
+            <li><a class="red" href="./assets/docs/Resume_Haidar-Ali.pdf">/resume</a></li>
           </ul>
         </div>
       </div>
@@ -52,7 +60,7 @@
         scripts, and rice the good 'ol <a class="yellow" target="_blank" href="https://archlinux.org/">Arch</a>. 
         </p>
         <p>
-          I read loads of books. Mostly non-fiction because I find fiction books impractical. Some of the reads I'd recommend include:
+        I read loads of books. Mostly non-fiction because I find fiction books impractical. Some of the reads I'd recommend include:
         </p>
         <ul>
           <li><a class="yellow" target="_blank" href="https://www.goodreads.com/book/show/66354.Flow">Flow by Mihaly Csikszentmihalyi</a></li>
