--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,6 +14,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/main.css" />
     <link rel="shortcut icon" type="image/png" href="../assets/img/favicon.ico" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-177832705-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-177832705-1');
+    </script>
   </head>
   <body>
     <div class="container">
@@ -31,7 +39,7 @@
             <li><a class="yellow" href="../index.html">/whoami</a></li>
             <li><a class="yellow active" href="#">/projects</a></li>
             <li><a class="yellow" href="./tools.html">/toolbox</a></li>
-            <li><a class="red" class="resume" href="../assets/docs/Resume_Haidar-Ali.pdf">/resume</a></li>
+            <li><a class="red" href="../assets/docs/Resume_Haidar-Ali.pdf">/resume</a></li>
           </ul>
         </div>
       </div>
