--- a/pages/projects.html
+++ b/pages/projects.html
@@ -39,7 +39,7 @@
             <li><a class="yellow" href="../index.html">/whoami</a></li>
             <li><a class="yellow active" href="#">/projects</a></li>
             <li><a class="yellow" href="./tools.html">/toolbox</a></li>
-            <li><a class="red" href="../assets/docs/Resume_Haidar-Ali.pdf">/resume</a></li>
+            <li><a class="red" target="_blank" href="https://drive.google.com/file/d/1DLHUatuZRteWUEju7nXL2rihkBqaV2Nn/view?usp=sharing">/resume</a></li>
           </ul>
         </div>
       </div>
