Added spaces for the tools list

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -56,16 +56,16 @@
 
           </pre>
           <ul>
-            <li><em>Operating System:</em>Arch Linux</li>
-            <li><em>Window Manager:</em>DWM</li>
-            <li><em>Code Editor:</em>NeoVi</li>
-            <li><em>Terminal:</em>st</li>
-            <li><em>Browser:</em>Mozilla Firefox</li>
-            <li><em>File Manager:</em>lf</li>
-            <li><em>Media Player:</em>mpv</li>
-            <li><em>Image Editor:</em>GIMP</li>
-            <li><em>Image Viewer</em>feh, sxiv</li>
-            <li><em>Document Viewer:</em>zathura</li>
+            <li><em>Operating System: </em>Arch Linux</li>
+            <li><em>Window Manager: </em>DWM</li>
+            <li><em>Code Editor: </em>NeoVi</li>
+            <li><em>Terminal: </em>st</li>
+            <li><em>Browser: </em>Mozilla Firefox</li>
+            <li><em>File Manager: </em>lf</li>
+            <li><em>Media Player: </em>mpv</li>
+            <li><em>Image Editor: </em>GIMP</li>
+            <li><em>Image Viewer: </em>feh, sxiv</li>
+            <li><em>Document Viewer: </em>zathura</li>
           </ul>
         </div>
       </div>
