Typo in tools list

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -58,7 +58,7 @@
           <ul>
             <li><em>Operating System: </em>Arch Linux</li>
             <li><em>Window Manager: </em>DWM</li>
-            <li><em>Code Editor: </em>NeoVi</li>
+            <li><em>Code Editor: </em>NeoVim</li>
             <li><em>Terminal: </em>st</li>
             <li><em>Browser: </em>Mozilla Firefox</li>
             <li><em>File Manager: </em>lf</li>
