--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
       </div>
       <div class="footer">
-        &copy; 2021. Updated on 27 May, 2021. <a href="https:/github.com/heyxsh/haidarz">GitHub</a>.
+        &copy; 2021. Updated on 27 May, 2021. <a class="yellow" href="https:/github.com/heyxsh/haidarz">GitHub</a>.
       </div>
     </div>
   </body>
