--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Haidar Ali" />
-    <meta name="keywords" content="software developer, engineer, programmer, backend, haidar, haidar ali, golang, go, chrome, chrome extension, portfolio, personal website" />
+    <meta name="keywords" content="software developer, engineer, javascript, nodejs, node.js, devops, programmer, backend, haidar, haidar ali, golang, go, chrome, chrome extension, portfolio, personal website" />
     <meta name="description" content="Haidar's personal website." />
     <meta name="subject" content="Personal Portfolio Website" />
     <meta name="coverage" content="Worldwide" />
@@ -33,19 +33,17 @@
 /_//_/\_,_/_/\_,_/\_,_/_/ 
         </pre>
         <h4>Haidar Ali</h4>
-        <p class="pronun">hey-thur-aleeh</p>
         <div class="nav">
           <ul>
-            <li><a class="yellow active" href="#">/whoami</a></li>
-            <li><a class="yellow" href="./pages/projects.html">/projects</a></li>
-            <li><a class="yellow" href="./pages/tools.html">/toolbox</a></li>
-            <li><a class="red" target="_blank" href="https://drive.google.com/file/d/1DLHUatuZRteWUEju7nXL2rihkBqaV2Nn/view?usp=sharing">/resume</a></li>
+            <li><a class="red" target="_blank" href="https://docs.google.com/document/d/19iTQJQ6t1MuLbbU-bECKak_ECsqJ0U-rPbqr5iyqMnk/edit">Resume</a></li>
           </ul>
         </div>
       </div>
       <div class="content">
         <p>
-        Software developer from <a class="yellow" target="_blank" href="https://en.wikipedia.org/wiki/Swat_District">Swat, Pakistan</a>. Graduated with BS in Software Engineering.  Main focus on designing and developing backend services. Working as a freelance. Open-source enthusiast. <a class="yellow" target="_blank" href="https://suckless.org/philosophy/">Suckless philosophy</a> fanatic. Average minimalsim enjoyer.
+        Software developer from Swat, Pakistan. Graduated with BS in Software Engineering. Main focus on designing and developing backend services. Working as a freelance. Open-source enthusiast.
+
+        Currently working (temporarily) at <a href="https://baeldung.com">Baeldung</a> as an author for Linux-centric topics.
         </p>
         <p>Some of my superpowers include:</p>
         <ul>
@@ -55,30 +53,14 @@
           <li>Hands-on software troubleshooting experience</li>
           <li>Excellent documentation writing skills for future maintenance and upgrades</li>
         </ul>
-        <p>
-        I like to keep things simple because unnecessary complexity begs chaos. I consistently learn new methodolgies, best practices, and make mistakes. I've been coding in JavaScript for 7 years to finally understand that it's got <a class="yellow" target="_blank" href="https://whydoesitsuck.com/why-does-javascript-suck/">lots of quirks</a>, so I'm currently in transition to <a class="yellow" target="_blank" href="https://golang.org">Golang</a>. I ocassionaly write Google Chrome extensions, automation
-        scripts, and rice the good 'ol <a class="yellow" target="_blank" href="https://archlinux.org/">Arch</a>. 
-        </p>
-        <p>
-        I read loads of books. Mostly non-fiction because I find fiction books impractical. Some of the reads I'd recommend include:
-        </p>
-        <ul>
-          <li><a class="yellow" target="_blank" href="https://www.goodreads.com/book/show/66354.Flow">Flow by Mihaly Csikszentmihalyi</a></li>
-          <li><a class="yellow" target="_blank" href="https://www.goodreads.com/book/show/603257.Concepts_of_Programming_Languages">Concepts of Programming Languages by Robert W. Sebesta</a></li>
-          <li><a class="yellow" target="_blank" href="https://www.goodreads.com/book/show/52084.Programming_Pearls">Programming Pearls by Jon L. Bentley</a></li>
-          <li><a class="yellow" target="_blank" href="https://www.goodreads.com/book/show/31138556-homo-deus">Homo Deus: A History of Tomorrow by Yuval Harari</a></li>
-          <li><a class="yellow" target="_blank" href="https://www.goodreads.com/book/show/27276428-the-gene">The Gene: An Intimate History by Siddhartha Mukherjee</a></li>
-          <li><a class="yellow" target="_blank" href="https://www.goodreads.com/book/show/54140556-working-in-public">Working in Public by Nadia Eghbal</a></li>
-        </ul>
         <div class="social">
           <a class="green" href="mailto:haidarzsh@gmail.com">Email</a> /
-          <a class="green" href="tg://t.me/heyxsh">Telegram</a> /
-          <a class="green" href="https://github.com/heyxsh">GitHub</a> /
+          <a class="green" href="https://github.com/heyzsh">GitHub</a> /
           <a class="green" href="https://linkedin.com/in/haidar-ali-k">LinkedIn</a>
         </div>
       </div>
       <div class="footer">
-        &copy; 2021. <a class="yellow" target="_blank" href="https://github.com/heyxsh/haidarz">Available on GitHub</a>
+        &copy; 2022. <a class="yellow" target="_blank" href="https://github.com/heyzsh/heyzsh.github.io">Available on GitHub</a>
       </div>
     </div>
   </body>
