added goodreads link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
         <div class="social">
           <a class="green" href="mailto:haidarzsh@gmail.com">Email</a> /
           <a class="green" href="https://github.com/heyzsh">GitHub</a> /
-          <a class="green" href="https://linkedin.com/in/haidar-ali-k">LinkedIn</a>
+          <a class="green" href="https://linkedin.com/in/haidar-ali-k">LinkedIn</a> /
+          <a class="green" href="https://www.goodreads.com/user/show/140387964-haidar-ali">Goodreads</a>
         </div>
       </div>
       <div class="footer">
